[package]
name = "Lostlab"
version = "1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.3.1"
base64 = "0.13"
lazy_static = "1.4.0"
dashmap = "5.4.0"