[package]
name = "Lostlab"
version = "1.0.1"
edition = "2021"

[dependencies]
actix-web = { version = "4.0", features = ["rustls"] }
awc = { version = "3.5.1", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.3"
rustls = "0.20"
rustls-pemfile = "1.0"
